--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -21,7 +21,7 @@
     
     <ul class="tab">
       <li><p>Dashboard</p></li>
-      <li><button class="tablinks" onclick="openMenu(event, 'dashboard')" id="defaultOpen">World Map</button></li>
+      <li><button class="tablinks" id="defaultOpen">World Map</button></li>
     </ul>
 
     <div id="dashboard" class="tabcontent">
@@ -33,7 +33,9 @@
         </div>
       </div>
     </div>
-  
+
     <script type="text/javascript" src="static/worldMap.js"></script>
+    <script type="text/javascript" src="static/dashboard.js"></script>
+    
   </body>
 </html> 
