--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -4,13 +4,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="https://unpkg.com/d3-simple-slider"></script>
-    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-    <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
+    <script src="//d3js.org/d3.v4.min.js"></script>
+    <script src="//d3js.org/queue.v1.min.js"></script>
+    <script src="//d3js.org/topojson.v1.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.0/d3-tip.js"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    
+
+    <link rel="stylesheet" href="static/worldmap.css" />
+  
   </head>
 
   <body>
@@ -22,7 +27,7 @@
 
     <div id="dashboard" class="tabcontent">
       <div class="row">
-        <div class="col-sm-5">
+        <div class="col-sm-7">
           <div id="worldmap" class="row">
             <svg id='svgWorldMap'></svg>
           </div>
@@ -32,6 +37,7 @@
 
     <script type="text/javascript" src="static/worldMap.js"></script>
     <script type="text/javascript" src="static/dashboard.js"></script>
+    
     
   </body>
 </html> 
