--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -28,7 +28,7 @@
     <div id="dashboard" class="tabcontent">
       <div class="row">
         <div class="col-sm-7">
-          <div id="worldmap" class="row">
+          <div id="worldmap" class="row" style="--aspect-ratio:16/9;">
             <svg id='svgWorldMap'></svg>
           </div>
         </div>
