--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -35,6 +35,7 @@
       </div>
     </div>
 
+    <script type="text/javascript" src="static/global_vars.js"></script>
     <script type="text/javascript" src="static/worldMap.js"></script>
     <script type="text/javascript" src="static/dashboard.js"></script>
     
