linechart initital changes

--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -12,33 +13,45 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    
+
 
     <link rel="stylesheet" href="static/worldmap.css" />
-  
-  </head>
+    <link rel="stylesheet" href="static/lineChart.css" />
 
-  <body>
-    
+</head>
+
+<body>
+
     <ul class="tab">
-      <li><p>Dashboard</p></li>
-      <li><button class="tablinks" id="defaultOpen">World Map</button></li>
+        <li>
+            <p>Dashboard</p>
+        </li>
+        <li><button class="tablinks" id="defaultOpen">World Map</button></li>
     </ul>
 
     <div id="dashboard" class="tabcontent">
-      <div class="row">
-        <div class="col-sm-7">
-          <div id="worldmap" class="row" style="--aspect-ratio:16/9;">
-            <svg id='svgWorldMap'></svg>
-          </div>
+        <div class="row">
+            <div class="col-sm-7">
+                <div id="worldmap" class="row" style="--aspect-ratio:16/9;">
+                    <svg id='svgWorldMap'></svg>
+                </div>
+            </div>
         </div>
-      </div>
+        <div class="row">
+            <div class="col-sm-7">
+                <div id="linechart" class="row">
+                    <svg id='svgLineChart'></svg>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script type="text/javascript" src="static/global_vars.js"></script>
     <script type="text/javascript" src="static/worldMap.js"></script>
     <script type="text/javascript" src="static/dashboard.js"></script>
-    
-    
-  </body>
-</html> 
+    <script type="text/javascript" src="static/lineChart.js"></script>
+
+
+</body>
+
+</html>
