--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -27,6 +27,7 @@
             <p>Dashboard</p>
         </li>
         <li><button class="tablinks" id="defaultOpen">World Map</button></li>
+        <li><button class="tablinks" id="lineChartTab">Line Chart</button></li>
     </ul>
 
     <div id="dashboard" class="tabcontent">
@@ -39,7 +40,7 @@
         </div>
         <div class="row">
             <div class="col-sm-7">
-                <div id="linechart" class="row">
+                <div id="linechart" class="row" style="--aspect-ratio:16/9;">
                     <svg id='svgLineChart'></svg>
                 </div>
             </div>
