--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -27,7 +27,7 @@
             <p>Dashboard</p>
         </li>
         <li><button class="tablinks" id="defaultOpen">World Map</button></li>
-        <li><button class="tablinks" id="lineChartTab">Line Chart</button></li>
+        <li><button class="tablinks" id="lineChart">Line Chart</button></li>
     </ul>
 
     <div id="dashboard" class="tabcontent">
@@ -38,8 +38,11 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div id="dashboard" class="tabcontent">
         <div class="row">
-            <div class="col-sm-7">
+            <div class="col-12">
                 <div id="linechart" class="row" style="--aspect-ratio:16/9;">
                     <svg id='svgLineChart'></svg>
                 </div>
