linechart covid data

--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -42,9 +42,9 @@
 
     <div id="dashboard" class="tabcontent">
         <div class="row">
-            <div class="col-12">
+            <div class="col-sm-7">
                 <div id="linechart" class="row" style="--aspect-ratio:16/9;">
-                    <svg id='svgLineChart'></svg>
+                    <svg id='svgLineChart' width='2000' height='2000'></svg>
                 </div>
             </div>
         </div>
