added stacked bar chart

--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -32,16 +32,16 @@
 
     <div id="dashboard" class="tabcontent">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-7">
                 <div id="worldmap" class="row" style="--aspect-ratio:16/9;">
                     <svg id='svgWorldMap'></svg>
                 </div>
             </div>
-            <!-- <div class="col-sm-5">
-                <div id="linechart" class="row" style="--aspect-ratio:16/9;">
-                    <svg id='svgLineChart'></svg>
+            <div class="col-sm-5">
+                <div id="barchart" class="row" style="--aspect-ratio:16/9;">
+                    <svg id='svgBarChart'></svg>
                 </div>
-            </div> -->
+            </div>
         </div>
         <div class="row">
             <div class="col-sm-12">
@@ -57,6 +57,7 @@
     <script type="text/javascript" src="static/worldMap.js"></script>
     <script type="text/javascript" src="static/dashboard.js"></script>
     <script type="text/javascript" src="static/lineChart.js"></script>
+    <script type="text/javascript" src="static/barChart.js"></script>
 
 
 </body>
