--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -15,8 +15,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 
-    <link rel="stylesheet" href="static/worldmap.css" />
-    <link rel="stylesheet" href="static/lineChart.css" />
+    <link rel="stylesheet" href="static/css/worldmap.css" />
+    <link rel="stylesheet" href="static/css/lineChart.css" />
 
 </head>
 
@@ -53,11 +53,11 @@
     </div>
 
 
-    <script type="text/javascript" src="static/global_vars.js"></script>
-    <script type="text/javascript" src="static/worldMap.js"></script>
-    <script type="text/javascript" src="static/dashboard.js"></script>
-    <script type="text/javascript" src="static/lineChart.js"></script>
-    <script type="text/javascript" src="static/barChart.js"></script>
+    <script type="text/javascript" src="static/js/global_vars.js"></script>
+    <script type="text/javascript" src="static/js/worldMap.js"></script>
+    <script type="text/javascript" src="static/js/dashboard.js"></script>
+    <script type="text/javascript" src="static/js/lineChart.js"></script>
+    <script type="text/javascript" src="static/js/barChart.js"></script>
 
 
 </body>
