--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -16,20 +16,25 @@
 
 
     <link rel="stylesheet" href="static/css/worldmap.css" />
-    <link rel="stylesheet" href="static/css/lineChart.css" />
+    <link rel="stylesheet" href="static/css/lineChart.css" /> 
 
     <script type="text/javascript" src="static/js/global_vars.js"></script>
+    <script src="static/lib/d3.layout.cloud.js"></script>
+
+    <style>
+     /* body {
+     background-color: lightgrey;
+       } */
+  
+     svg #svgWordCloud{
+      width: 100%;
+      height: 100%;
+      position: center;
+       }
+        </style>
 </head>
 
 <body>
-
-    <!-- <ul class="tab">
-        <li>
-            <p>Dashboard</p>
-        </li>
-        <li><button class="tablinks" id="defaultOpen">World Map</button></li>
-        <li><button class="tablinks" id="lineChart">Line Chart</button></li>
-    </ul> -->
 
     <div id="dashboard" class="tabcontent">
         <div class="row">
@@ -51,13 +56,25 @@
                 </div>
             </div>
         </div>
+         <div class="row">
+            <div class="col-sm-12">
+                <div id="wordcloud" class="row" style="--aspect-ratio:16/9;">
+                    <svg id='svgWordCloud'  width="960" height="500"></svg>
+                </div>
+            </div>
+        </div> 
     </div>
 
+  <script>
+
+  </script>
+
+    <script type="text/javascript" src="static/js/dashboard.js"></script>
 
     <script type="text/javascript" src="static/js/worldMap.js"></script>
-    <script type="text/javascript" src="static/js/dashboard.js"></script>
     <script type="text/javascript" src="static/js/lineChart.js"></script>
     <script type="text/javascript" src="static/js/barChart.js"></script>
+    <script type="text/javascript" src="static/js/wordCloud.js"></script>
 
 
 </body>
