--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -59,7 +59,7 @@
          <div class="row">
             <div class="col-sm-12">
                 <div id="wordcloud" class="row" style="--aspect-ratio:16/9;">
-                    <svg id='svgWordCloud'  width="960" height="500"></svg>
+                    <svg id='svgWordCloud'></svg>
                 </div>
             </div>
         </div> 
