--- a/final_project/src/static/css/lineChart.css
+++ b/final_project/src/static/css/lineChart.css
@@ -9,3 +9,13 @@
     fill: none;
     pointer-events: all;
 }
+
+.bubbles {
+    stroke-width: 1px;
+    stroke: black;
+    opacity: .8
+}
+
+.bubbles:hover {
+    stroke: black;
+}
