--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -13,25 +13,26 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+    <!-- Load color scale -->
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 
     <link rel="stylesheet" href="static/css/worldmap.css" />
-    <link rel="stylesheet" href="static/css/lineChart.css" /> 
+    <link rel="stylesheet" href="static/css/lineChart.css" />
 
     <script type="text/javascript" src="static/js/global_vars.js"></script>
     <script src="static/lib/d3.layout.cloud.js"></script>
 
     <style>
-     /* body {
+        /* body {
      background-color: lightgrey;
        } */
-  
-     svg #svgWordCloud{
-      width: 100%;
-      height: 100%;
-      position: center;
-       }
-        </style>
+        
+        svg #svgWordCloud {
+            width: 100%;
+            height: 100%;
+            position: center;
+        }
+    </style>
 </head>
 
 <body>
@@ -56,18 +57,17 @@
                 </div>
             </div>
         </div>
-         <div class="row">
+        <div class="row">
             <div class="col-sm-12">
                 <div id="wordcloud" class="row" style="--aspect-ratio:16/9;">
-                    <svg id='svgWordCloud'  width="960" height="500"></svg>
+                    <svg id='svgWordCloud' width="960" height="500"></svg>
                 </div>
             </div>
-        </div> 
+        </div>
     </div>
 
-  <script>
-
-  </script>
+    <script>
+    </script>
 
     <script type="text/javascript" src="static/js/dashboard.js"></script>
 
