--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -14,60 +14,70 @@
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-
     <link rel="stylesheet" href="static/css/worldmap.css" />
     <link rel="stylesheet" href="static/css/lineChart.css" /> 
+    <link rel="stylesheet" href="static/css/dashboard.css" /> 
+
+    <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico">
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ=="
+    crossorigin>
+
+    <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js" integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
+    crossorigin></script>
 
     <script type="text/javascript" src="static/js/global_vars.js"></script>
     <script src="static/lib/d3.layout.cloud.js"></script>
 
-    <style>
+    <!-- <style>
      /* body {
      background-color: lightgrey;
        } */
   
-     svg #svgWordCloud{
-      width: 100%;
-      height: 100%;
-      position: center;
-       }
-        </style>
+    svg #svgWordCloud{
+        width: 100%;
+        height: 100%;
+        position: center;
+    }
+    </style> -->
 </head>
 
 <body>
-
-    <div id="dashboard" class="tabcontent">
+    <div id="dashboard" class = "container-fluid">
         <div class="row">
-            <div class="col-sm-7">
-                <div id="worldmap" class="row" style="--aspect-ratio:16/9;">
+            <div class="col">
+                <div id="worldmap" class="dash-unit">
                     <svg id='svgWorldMap'></svg>
                 </div>
             </div>
-            <div class="col-sm-5">
-                <div id="barchart" class="row" style="--aspect-ratio:16/9;">
-                    <svg id='svgBarChart'></svg>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12">
-                <div id="linechart" class="row" style="--aspect-ratio:16/9;">
+            <div class="col">
+                <div id="linechart" class="dash-unit">
                     <svg id='svgLineChart'></svg>
                 </div>
             </div>
         </div>
-         <div class="row">
-            <div class="col-sm-12">
-                <div id="wordcloud" class="row" style="--aspect-ratio:16/9;">
+        <div class="row">
+            <div class="col">
+                <div id="barchart" class="dash-unit">
+                    <svg id='svgBarChart'></svg>
+                </div>
+            </div>
+            <div class="col">
+                <div id="wordcloud" class="dash-unit">
                     <svg id='svgWordCloud'></svg>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            
+        </div> 
+        <div class="row">
+            <div class="col-sm-12">
+                <div id="choropleth" style="--aspect-ratio:16/9;">
                 </div>
             </div>
         </div> 
     </div>
-
-  <script>
-
-  </script>
 
     <script type="text/javascript" src="static/js/dashboard.js"></script>
 
@@ -75,7 +85,8 @@
     <script type="text/javascript" src="static/js/lineChart.js"></script>
     <script type="text/javascript" src="static/js/barChart.js"></script>
     <script type="text/javascript" src="static/js/wordCloud.js"></script>
-
+    <script type="text/javascript" src="static/js/us-states.js"></script>
+    <script type="text/javascript" src="static/js/choroLeaf.js"></script>
 
 </body>
 
