--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -29,6 +29,9 @@
     <script type="text/javascript" src="static/js/global_vars.js"></script>
     <script src="static/lib/d3.layout.cloud.js"></script>
 
+    <!-- Load color scale -->
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+
     <!-- <style>
      /* body {
      background-color: lightgrey;
