--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -61,11 +61,11 @@
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <!-- <div class="col">
                 <div id="barchart" class="dash-unit">
                     <svg id='svgBarChart'></svg>
                 </div>
-            </div>
+            </div> -->
             <div class="col">
                 <div id="wordcloud" class="dash-unit">
                     <svg id='svgWordCloud'></svg>
