--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -32,6 +32,11 @@
     <!-- Load color scale -->
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.24.0/d3-legend.js"></script>
+
+
     <!-- <style>
      /* body {
      background-color: lightgrey;
@@ -55,9 +60,9 @@
                     <svg id='svgLineChart'></svg>
                 </div>
             </div>
-            <div class="col">
-                <div id="worldmap" class="dash-unit">
-                    <svg id='svgWorldMap'></svg>
+            <div class="col" >
+                <div id="worldmap" class="dash-unit" >
+                    <svg id='svgWorldMap' width="100%" height="100%" preserveAspectRatio="xMidYMid meet"></svg>
                 </div>
             </div>
         </div>
