--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -97,7 +97,7 @@
     <script type="text/javascript" src="static/js/barChart.js"></script>
     <script type="text/javascript" src="static/js/wordCloud.js"></script>
     <script type="text/javascript" src="static/js/us-states.js"></script>
-    <script type="text/javascript" src="static/js/choroLeaf.js"></script>
+    <!-- <script type="text/javascript" src="static/js/choroLeaf.js"></script> -->
 
 </body>
 
