--- a/final_project/src/static/css/dashboard.css
+++ b/final_project/src/static/css/dashboard.css
@@ -13,12 +13,12 @@ body {
 	height:auto;
 }
 
-.dash-unit:hover {
+/* .dash-unit:hover {
 	background-color: #4f4f4f;
 	-moz-box-shadow:    3px 3px 2px 0px #151515;
     -webkit-box-shadow: 3px 3px 2px 0px #151515;
     box-shadow:         3px 3px 2px 0px #151515;
-}
+} */
 
 .dash-unit dtitle {
 	font-size:11px;
