--- a/final_project/src/static/css/worldmap.css
+++ b/final_project/src/static/css/worldmap.css
@@ -92,7 +92,7 @@ color:white;
 
 .countries {
     fill: none;
-    stroke: #fff;
+    stroke: rgb(177, 173, 173);
     stroke-linejoin: round;
   }
   .legendThreshold {
