--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="static/css/worldmap.css" />
     <link rel="stylesheet" href="static/css/lineChart.css" />
     <link rel="stylesheet" href="static/css/dashboard.css" />
+    <link rel="stylesheet" href="static/css/pcp.css" />
 
     <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico">
 
@@ -86,6 +87,13 @@
                         <svg id='svgWordCloud'></svg>
                     </div>
                 </div>
+                <div class="dash-unit">
+                    <dtitle>PCP</dtitle>
+                    <hr>
+                    <div id="pcp">
+                        <svg id='svgpcplot'></svg>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -97,6 +105,7 @@
     <script type="text/javascript" src="static/js/barChart.js"></script>
     <script type="text/javascript" src="static/js/wordCloud.js"></script>
     <script type="text/javascript" src="static/js/us-states.js"></script>
+    <script type="text/javascript" src="static/js/pcpPlot.js"></script>
     <!-- <script type="text/javascript" src="static/js/choroLeaf.js"></script> -->
 
 </body>
