--- a/final_project/src/static/css/dashboard.css
+++ b/final_project/src/static/css/dashboard.css
@@ -3,14 +3,19 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
-.dash-unit {		
-	margin-bottom: 30px;
-	padding-bottom:10px;
+.dash-unit {
+	margin-top: 20px;		
+	/* margin-bottom: 10px; */
+	padding-bottom:20px;
+	padding-top:20px;
+	padding-left:20px;
+	/* padding-right:20px; */
 	border: 1px solid #383737;
 	background-image:url('../images/sep-half.png');
 	background-color: #3d3d3d;
 	color:white;
 	height:auto;
+	width:auto;
 }
 
 /* .dash-unit:hover {
