added pcp axis and some more

--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -89,7 +89,7 @@
                     <svg id='svgBarChart'></svg>
                 </div>
             </div> -->
-            <div class="col">
+            <div class="col-sm-7">
                 <div class="dash-unit">
                     <dtitle>PCP</dtitle>
                     <hr>
@@ -97,6 +97,8 @@
                         <svg id='svgpcplot'></svg>
                     </div>
                 </div>
+            </div>
+            <div class = "col-sm-5">
                 <div class="dash-unit">
                     <dtitle>Word Cloud</dtitle>
                     <hr>
@@ -104,12 +106,10 @@
                         <svg id='svgWordCloud'></svg>
                     </div>
                 </div>
-                
             </div>
         </div>
     </div>
 
-    <script type="text/javascript" src="static/js/dashboard.js"></script>
 
     <!-- <script type="text/javascript" src="static/js/worldMap.js"></script> -->
     <script type="text/javascript" src="static/js/choropleth.js"></script>
@@ -119,6 +119,8 @@
     <script type="text/javascript" src="static/js/us-states.js"></script>
     <script type="text/javascript" src="static/js/pcpPlot.js"></script>
     <!-- <script type="text/javascript" src="static/js/choroLeaf.js"></script> -->
+    <script type="text/javascript" src="static/js/dashboard.js"></script>
+
 
 </body>
 
