--- a/final_project/src/static/css/dashboard.css
+++ b/final_project/src/static/css/dashboard.css
@@ -3,13 +3,22 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+#dashboardHeader h3{
+	text-align: center;
+	color:white;
+	font-weight: bold;
+	padding-bottom: 0;
+	margin-bottom: 0;
+	margin-top: 10px;
+}
+
 .dash-unit {
-	margin-top: 20px;		
+	margin-top: 10px;		
 	/* margin-bottom: 10px; */
 	padding-bottom:20px;
-	padding-top:20px;
-	padding-left:20px;
-	/* padding-right:20px; */
+	padding-top:10px;
+	padding-left:10px;
+	/* padding-right:1px; */
 	border: 1px solid #383737;
 	background-image:url('../images/sep-half.png');
 	background-color: #3d3d3d;
