--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -51,14 +51,20 @@
 </head>
 
 <body>
+    <div class="navbar-nav navbar-inverse navbar-fixed-top">
+        <div class="container">
+        <div id="dashboardHeader">
+            <h3>Covid Data Analyzer</h3>
+        </div>
+    </div>
+
     <div id="dashboard" class="container-fluid">
         <div class="row">
-            <div class="col-sm-5">
+            <div class="col-sm-5" style="padding-right: 5px;">
                 <div class="dash-unit">
                     <dtitle id="worldTitle"></dtitle>
                     <hr>
                     <div class='row'>
-                        <!-- <h3 id="worldTitle" text-align="center">Average daily cases between</h1> -->
                     </div>
                     <div class="row" title="Choropleth">
                         <div id="worldmap-legend-svg" class="col-sm-1"></div>
@@ -67,7 +73,7 @@
                     
                 </div>
             </div>
-            <div class="col-sm-7">
+            <div class="col-sm-7" style="padding-left: 5px;">
                 <div class="dash-unit" title="Time-Series line plot">
                     <dtitle id="lineTitle"></dtitle>
                     <select id='covidattr'>
@@ -76,19 +82,12 @@
                         <option value="new_vaccinations">Daily Vaccinations</option>
                     </select>
                     <hr>
-                    <div id="linechart">
-                        <svg id='svgLineChart'></svg>
-                    </div>
+                    <div id="linechart"></div>
                 </div>
             </div>
 
         </div>
         <div class="row">
-            <!-- <div class="col">
-                <div id="barchart" class="dash-unit">
-                    <svg id='svgBarChart'></svg>
-                </div>
-            </div> -->
             <div class="col-sm-7">
                 <div class="dash-unit" title="Parallel Axis Coordinate Plot">
                     <dtitle id="pcpTitle">Parallel Co-ordinates Plot</dtitle>
