--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -64,7 +64,7 @@
                         <div id="worldmap-legend-svg" class="col-sm-1"></div>
                         <div id="worldmap" class="col-sm-11"></div>
                     </div>
-                    
+
                 </div>
             </div>
             <div class="col-sm-7">
@@ -89,7 +89,7 @@
                     <svg id='svgBarChart'></svg>
                 </div>
             </div> -->
-            <div class="col-sm-7">
+            <div class="col-sm-6">
                 <div class="dash-unit">
                     <dtitle>PCP</dtitle>
                     <hr>
@@ -98,12 +98,21 @@
                     </div>
                 </div>
             </div>
-            <div class = "col-sm-5">
+            <div class="col-sm-4">
                 <div class="dash-unit">
                     <dtitle>Word Cloud</dtitle>
                     <hr>
                     <div id="wordcloud">
                         <svg id='svgWordCloud'></svg>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-2">
+                <div class="dash-unit">
+                    <dtitle>Covid Statistics</dtitle>
+                    <hr>
+                    <div id="covidstats">
+                        <svg id='svgcovidstats'></svg>
                     </div>
                 </div>
             </div>
@@ -118,6 +127,7 @@
     <script type="text/javascript" src="static/js/wordCloud.js"></script>
     <script type="text/javascript" src="static/js/us-states.js"></script>
     <script type="text/javascript" src="static/js/pcpPlot.js"></script>
+    <script type="text/javascript" src="static/js/stats.js"></script>
     <!-- <script type="text/javascript" src="static/js/choroLeaf.js"></script> -->
     <script type="text/javascript" src="static/js/dashboard.js"></script>
 
