--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -88,7 +88,7 @@
 
             </div>
             <div class="row">
-                <div class="col-sm-7">
+                <div class="col-sm-6" style="padding-right: 5px;">
                     <div class="dash-unit" title="Parallel Axis Coordinate Plot">
                         <dtitle id="pcpTitle">Parallel Co-ordinates Plot</dtitle>
                         <hr>
@@ -97,7 +97,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-5">
+                <div class="col-sm-2" style="padding-left: 5px; padding-right: 5px;">
+                    <div class="dash-unit" title="Covid Statistics Dashboard">
+                        <dtitle id="statTitle">Covid Statistics</dtitle>
+                        <hr>
+                        <div id="covidstats">
+                            <div id='svgcovidstats'></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4" style="padding-left: 5px;">
                     <div class="dash-unit" title="Word Cloud">
                         <dtitle id="wordCloudTitle"></dtitle>
                         <hr>
@@ -106,15 +115,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-2">
-                    <div class="dash-unit">
-                        <dtitle>Covid Statistics</dtitle>
-                        <hr>
-                        <div id="covidstats">
-                            <svg id='svgcovidstats'></svg>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
 
