--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -57,6 +57,7 @@
                 <h3>COVID-19 Data Analyzer</h3>
             </div>
         </div>
+    </div>
 
         <div id="dashboard" class="container-fluid">
             <div class="row">
@@ -100,7 +101,10 @@
                 </div>
                 <div class="col-sm-2" style="padding-left: 5px; padding-right: 5px;">
                     <div class="dash-unit" title="Covid Statistics Dashboard">
-                        <dtitle id="statTitle">Covid Statistics</dtitle>
+                        <div id="statTitle" align-items="center">
+                            <dtitle>Covid Statistics</dtitle>
+                        </div>
+                        
                         <hr>
                         <div id="covidstats">
                             <div id='svgcovidstats'></div>
