--- a/final_project/src/static/css/dashboard.css
+++ b/final_project/src/static/css/dashboard.css
@@ -25,6 +25,7 @@ body {
     color: white;
     height: auto;
     width: auto;
+	text-align: center;
 }
 
 
@@ -42,30 +43,8 @@ body {
     text-align: center;
     color: #ffffff;
     margin: 8px;
-    /* padding-left:100px; */
     height: inherit;
     letter-spacing: normal;
-}
-
-.dash-unit dtitle#pcpTitle {
-    padding-left: 200px;
-}
-
-.dash-unit dtitle#wordCloudTitle {
-    padding-left: 70px;
-}
-
-.dash-unit dtitle#lineTitle {
-    padding-left: 100px;
-}
-
-.dash-unit dtitle#worldTitle {
-    padding-left: 100px;
-}
-
-.dash-unit div#statTitle {
-    /* padding-left: 60px; */
-	align-items: center;
 }
 
 .dash-unit hr {
