choropleth update scale

--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -41,7 +41,7 @@
     <div class="navbar-nav navbar-inverse navbar-fixed-top">
         <div class="container">
             <div id="dashboardHeader">
-                <h3>COVID-19 Data Analyzer</h3>
+                <h3>COVID-19 - Government Interventions and it's Impact Analysis</h3>
             </div>
         </div>
     </div>
@@ -108,19 +108,12 @@
             </div>
         </div>
 
-
-        <!-- <script type="text/javascript" src="static/js/worldMap.js"></script> -->
         <script type="text/javascript" src="static/js/dashboard.js"></script>
         <script type="text/javascript" src="static/js/choropleth.js"></script>
         <script type="text/javascript" src="static/js/lineChart.js"></script>
-        <script type="text/javascript" src="static/js/barChart.js"></script>
         <script type="text/javascript" src="static/js/wordCloud.js"></script>
-        <script type="text/javascript" src="static/js/us-states.js"></script>
         <script type="text/javascript" src="static/js/pcpPlot.js"></script>
         <script type="text/javascript" src="static/js/stats.js"></script>
-        <!-- <script type="text/javascript" src="static/js/choroLeaf.js"></script> -->
-
-
 
 </body>
 
