--- a/final_project/src/static/css/dashboard.css
+++ b/final_project/src/static/css/dashboard.css
@@ -25,7 +25,7 @@ body {
     color: white;
     height: auto;
     width: auto;
-	text-align: center;
+    text-align: center;
 }
 
 
@@ -52,4 +52,17 @@ body {
     border-top: 1px solid #151515;
     border-top-style: dashed;
     margin-top: 3px;
+}
+
+.button {
+    background-color: #d63939;
+    border: none;
+    color: white;
+    padding: 5px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
 }
