--- a/final_project/src/templates/index.html
+++ b/final_project/src/templates/index.html
@@ -41,7 +41,7 @@
     <div class="navbar-nav navbar-inverse navbar-fixed-top">
         <div class="container">
             <div id="dashboardHeader">
-                <h3>COVID-19 - Government Interventions and it's Impact Analysis</h3>
+                <h3>COVID-19 - Government Interventions Analysis</h3>
             </div>
         </div>
     </div>
